[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Joueur/UiTourDePartie.gd" type="Script" id=1]
[ext_resource path="res://Assets/Font/CatChild_base_12.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Font/CatChild_base_48.tres" type="DynamicFont" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PasserLeTourBouton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -124.5
margin_top = -165.0
margin_right = 124.5
margin_bottom = -100.0
custom_fonts/font = ExtResource( 2 )
text = "Passer au tour suivant"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelNbJoueursPrets" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -32.0
margin_top = -90.0
margin_right = 32.0
margin_bottom = -40.0
custom_fonts/font = ExtResource( 3 )
text = "7/10"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="PasserLeTourBouton" to="." method="passerLeTour"]
